[package]
name = "voicevox_core_java_api"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
cuda = ["voicevox_core/cuda"]
directml = ["voicevox_core/directml"]

[dependencies]
android_logger.workspace = true
chrono = { workspace = true, default-features = false, features = ["clock"] }
derive_more.workspace = true
easy-ext.workspace = true
jni.workspace = true
once_cell.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid.workspace = true
voicevox_core.workspace = true

[lints.rust]
unsafe_code = "allow" # jni-rsが要求
rust_2018_idioms = "warn"
