[package]
name = "voicevox_core_macros"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "macros"
proc-macro = true

[dependencies]
derive-syn-parse.workspace = true
indexmap.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["extra-traits", "full", "visit-mut"] }

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = "warn"
