[package]
name = "voicevox_core_macros"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "macros"
proc-macro = true

[dependencies]
derive-syn-parse.workspace = true
fs-err.workspace = true
indexmap.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde = { workspace = true, features = ["derive"] }
syn = { workspace = true, features = ["extra-traits", "full", "visit-mut"] }
toml.workspace = true

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = "warn"
