[package]
edition = "2021"
name = "voicevox_core_node_api"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi4", "serde-json"] }
napi-derive = "2"
voicevox_core.workspace = true
serde_json.workspace = true

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
