[package]
name = "voicevox_core_node_api"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
cuda = ["voicevox_core/cuda"]
directml = ["voicevox_core/directml"]

[dependencies]
napi = { version = "2.16.0", features = ["napi4", "serde-json", "tokio_rt"] }
napi-derive = "2.16.0"
voicevox_core.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[build-dependencies]
napi-build = "2"
