[package]
name = "voicevox_core_python_api"
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
async-lock.workspace = true
blocking.workspace = true
camino.workspace = true
duplicate.workspace = true
easy-ext.workspace = true
futures-lite.workspace = true
log.workspace = true
once_cell.workspace = true
pyo3 = { workspace = true, features = ["experimental-async", "abi3-py310", "extension-module"] }
pyo3-log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing = { workspace = true, features = ["log"] }
uuid.workspace = true
voicevox_core = { workspace = true, features = ["load-onnxruntime"] }
voicevox_core_macros.workspace = true

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = "warn"
