[package]
name = "voicevox_core_python_api"
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
async-lock.workspace = true
blocking.workspace = true
camino.workspace = true
derive_more = { workspace = true, features = ["from"] }
easy-ext.workspace = true
futures-lite.workspace = true
heck.workspace = true
log.workspace = true
pyo3 = { workspace = true, features = ["experimental-async", "abi3-py310", "extension-module", "uuid"] }
pyo3-log.workspace = true
ref-cast.workspace = true
serde = { workspace = true, features = ["derive"] }
serde-pyobject.workspace = true
serde_json.workspace = true
tracing = { workspace = true, features = ["log"] }
uuid.workspace = true
voicevox_core = { workspace = true, features = ["load-onnxruntime"] }
voicevox_core_macros.workspace = true

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = "warn"
