[project]
name = "voicevox_core"
version = "0.0.0"
requires-python = ">=3.10"
description = "VOICEVOX CORE の Python バインディングです。"
license-files = ["LICENSE"]
readme = "../../README.md"
authors = [{ name = "Hiroshiba", email = "hihokaruta@gmail.com" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Environment :: GPU :: NVIDIA CUDA",
]

[build-system]
requires = ["maturin>=1.10.2,<2"]
build-backend = "maturin"

[tool.isort]
profile = "black"

[tool.pyright]
executionEnvironments = [{ root = "python/benches" }, { root = "python/test" }, { root = "python" }]

[tool.maturin]
module-name = "voicevox_core._rust"
bindings = "pyo3"
python-source = "python"

[tool.poetry]
requires-poetry = ">=2"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[tool.poetry.group.docs.dependencies]
sphinx = "8.1.3"
pydata-sphinx-theme = "0.16.1"
sphinx-autoapi = "3.4.0"

[tool.poetry.group.dev.dependencies]
maturin = "1.10.2"

[tool.poetry.group.test.dependencies]
pytest = "7.3.1"
pytest-asyncio = "0.21.0"
pytest-codspeed = "4.0.0"
black = "23.3.0"
isort = "5.13.2"
