[project]
name = "voicevox_core"
version = "0.0.0"
requires-python = ">=3.10"
description = "VOICEVOX CORE の Python バインディングです。"
license-files = ["LICENSE"]
readme = "../../README.md"
authors = [{ name = "Hiroshiba", email = "hihokaruta@gmail.com" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Environment :: GPU :: NVIDIA CUDA",
]

[build-system]
requires = ["maturin>=1.10.2,<2"]
build-backend = "maturin"

[tool.isort]
profile = "black"

[tool.pyright]
executionEnvironments = [{ root = "python/benches" }, { root = "python/test" }, { root = "python" }]

[tool.maturin]
module-name = "voicevox_core._rust"
bindings = "pyo3"
python-source = "python"

[tool.poetry]
requires-poetry = ">=2"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[tool.poetry.group.docs.dependencies]
sphinx = "9.1.0"
pydata-sphinx-theme = "0.16.1"
sphinx-autoapi = "3.4.0"

[tool.poetry.group.dev.dependencies]
maturin = "1.10.2"

[tool.poetry.group.test.dependencies]
pytest = "9.0.2"
pytest-asyncio = "1.3.0"
pytest-codspeed = "4.2.0"
black = "26.1.0"
isort = "8.0.1"
