[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[dependencies]
cbindgen.workspace = true
clap = { workspace = true, features = ["derive"] }
color-eyre.workspace = true
eyre.workspace = true
fs-err.workspace = true

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = "warn"
