[package]
name = "voicevox_cli"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
clap = { workspace = true, features = ["derive"] }
const_format = { workspace = true }
voicevox_core = { workspace = true, features = ["load-onnxruntime"] }
